fix modal text align

--- a/styles/project-modal.css
+++ b/styles/project-modal.css
@@ -9,6 +9,7 @@
 .modal__project {
   display: flex;
   flex-wrap: wrap;
+  text-align: left;
 }
 .project-header {
   display: flex;
